--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">capstone</string>
     <string name="title_activity_text_field">TextField</string>
     <string name="title_activity_jet_button">JetButton</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
