--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_text_field">TextField</string>
     <string name="title_activity_jet_button">JetButton</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_jet_search_bar">JetSearchBar</string>
 </resources>
