36 ui upload page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="title_activity_jet_button">JetButton</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_jet_search_bar">JetSearchBar</string>
+    <string name="title_activity_main_page">MainPage</string>
+    <string name="title_activity_jet_top_bar">JetTopBar</string>
+    <string name="title_activity_main2">MainActivity2</string>
+    <string name="title_activity_detail_page">DetailPage</string>
+    <string name="title_activity_upload_page">UploadPage</string>
 </resources>
